--- a/css/contact.css
+++ b/css/contact.css
@@ -34,6 +34,8 @@
     transform: rotateY(180deg);
 }
 
+/* Fin Animacion Contact */
+
 .contact-divider {
     height: 8px;
     width: 70px;
@@ -56,13 +58,48 @@
 
 form {
     display: block;
-    width: 83%;
+    width: 100%; /*83*/
     max-width: 420px;
     margin: 40px auto 0 auto;
     padding: 30px 0 20px 0;
     background-color: var(--theme-color-inverse);
     border-radius: 20px;
 }
+
+/* .contact-content-form {
+    display: block;
+    width: 83%;
+    height: 441px;
+    max-width: 420px;
+    margin: 40px auto 0 auto;
+    padding: 30px 0 20px 0;
+    background-color: var(--theme-color-inverse);
+    border-radius: 20px;
+} */
+
+/* Animacion Formulario de Contacto */
+
+.contact-content-form-box{
+    height: 443px;
+    width: 100%; /*270px*/
+    margin: 0 auto;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: 1.5s;
+}
+
+.contact-content-form-box-side{
+    width: 100%;
+    position: absolute;
+    -moz-backface-visibility: hidden;
+         backface-visibility: hidden;
+}
+
+.contact-content-form-box-side-back{
+    transform: rotateY(180deg);
+}
+
+/* Fin Animacion Formulario de Contacto */
 
 .contact-group {
     width: 100%;
@@ -182,11 +219,23 @@ textarea:focus~.contact-line::before {
     transform: scale(1.07);
 }
 
+@media (min-width: 380px) {
+
+    .contact-content-form-box{
+        width: 90%;
+    }
+
+}
+
 @media (min-width: 710px) {
     form {
         width: 51%;
         min-width: 420px;
         max-width: 520px;
+    }
+
+    .contact-content-form-box{
+        width: 100%;
     }
 
     .contact-links {
