--- a/css/contact.css
+++ b/css/contact.css
@@ -34,6 +34,10 @@
     transform: rotateY(180deg);
 }
 
+.contact-content-title-box-side-front {
+    transform: rotateX(0deg);
+}
+
 /* Fin Animacion Contact */
 
 .contact-divider {
@@ -80,7 +84,7 @@ form {
 /* Animacion Formulario de Contacto */
 
 .contact-content-form-box{
-    height: 443px;
+    height: 450px;/*443px*/
     width: 100%; /*270px*/
     margin: 0 auto;
     position: relative;
@@ -101,12 +105,17 @@ form {
 
 /* Fin Animacion Formulario de Contacto */
 
-.contact-group {
+.contact-group-front {
     width: 100%;
     margin: 0 auto;
 }
 
-.contact-row {    
+.contact-group-back {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.contact-row {
     color: var(--theme-color);
     position: relative;
     margin: 45px;
@@ -203,7 +212,7 @@ textarea:focus~.contact-line::before {
 
 .contact-links {
     width: 230px;
-    margin: 40px auto 0px auto;
+    /* margin: 40px auto 0px auto; */
     display: flex;
     justify-content: space-evenly;
 }
@@ -218,6 +227,33 @@ textarea:focus~.contact-line::before {
     color: var(--primary-color);
     transform: scale(1.07);
 }
+/* Animacion Links */
+
+.contact-content-links-box{
+    height: 29px;
+    width: 230px;
+    margin: 40px auto 0px auto;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: 1.5s;
+}
+
+.contact-content-links-box-side{
+    position: absolute;
+    -moz-backface-visibility: hidden;
+         backface-visibility: hidden;
+}
+
+.contact-content-links-box-side-front{
+    transform: rotateX(0deg); 
+}
+
+.contact-content-links-box-side-back{
+    /* margin-top: 30px; Vuela */
+    transform: rotateY(180deg);
+}
+
+/* Fin Animacion Links */
 
 @media (min-width: 380px) {
 
@@ -235,9 +271,15 @@ textarea:focus~.contact-line::before {
     }
 
     .contact-content-form-box{
+        height: 510px;
         width: 100%;
     }
-
+    
+    .contact-content-links-box{
+        width: 280px;
+        margin: -20px auto 0px auto;
+    }
+    
     .contact-links {
         width: 280px;
     }
@@ -245,12 +287,22 @@ textarea:focus~.contact-line::before {
     .contact-links i {
         font-size: 30px; 
     }
+    
 }
 
 @media (min-width: 950px) {
     form {
         width: 51%;
         max-width: 550px;
+    }
+
+    .contact-content-form-box{
+        height: 455px;
+    }
+
+    .contact-content-links-box{
+        width: 350px;
+        margin: 30px auto 0px auto;
     }
 
     .contact-links {
