--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -43,6 +43,10 @@
     transform: rotateY(180deg);
 }
 
+.portfolio-content-title-box-side-front{
+    transform: rotateX(0deg);
+}
+
 /* Fin Animacion Portfolio */
 
 .portfolio-divider {
@@ -82,6 +86,10 @@
          backface-visibility: hidden;
 }
 
+.portfolio-container-cards-box-side-front1{
+    transform: rotateX(0deg);
+}
+
 .portfolio-container-cards-box-side-back1{
     transform: rotateY(180deg);
 }
@@ -100,6 +108,10 @@
     position: absolute;
     -moz-backface-visibility: hidden;
          backface-visibility: hidden;
+}
+
+.portfolio-container-cards-box-side-front2{
+    transform: rotateX(0deg);
 }
 
 .portfolio-container-cards-box-side-back2 {
@@ -122,6 +134,10 @@
          backface-visibility: hidden;
 }
 
+.portfolio-container-cards-box-side-front3{
+    transform: rotateX(0deg);
+}
+
 .portfolio-container-cards-box-side-back3 {
     transform: rotateY(180deg);
 }
@@ -140,6 +156,10 @@
     position: absolute;
     -moz-backface-visibility: hidden;
          backface-visibility: hidden;
+}
+
+.portfolio-container-cards-box-side-front4{
+    transform: rotateX(0deg);
 }
 
 .portfolio-container-cards-box-side-back4 {
@@ -162,6 +182,10 @@
          backface-visibility: hidden;
 }
 
+.portfolio-container-cards-box-side-front5{
+    transform: rotateX(0deg);
+}
+
 .portfolio-container-cards-box-side-back5 {
     transform: rotateY(180deg);
 }
@@ -180,6 +204,10 @@
     position: absolute;
     -moz-backface-visibility: hidden;
          backface-visibility: hidden;
+}
+
+.portfolio-container-cards-box-side-front6{
+    transform: rotateX(0deg);
 }
 
 .portfolio-container-cards-box-side-back6 {
