--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: var(--menu-mobile-background-color);
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-content: center ;
@@ -46,9 +46,9 @@
 /* Animacion Credits */
 
 .footer-credits-box{
-    height: 69px;
+    height: 69px;   
     width: 311px; /*290px*/ 
-    /*margin: 0 auto 0 auto;*/
+    margin: 5px auto 5px auto; /*ver*/
     position: relative;
     transform-style: preserve-3d;
     transition: 1.5s;
@@ -65,6 +65,7 @@
 }
 
 .footer-credits-box-side-front{
+    background-color: var(--menu-mobile-background-color);
     transform: rotateX(0deg); 
 }
 
